# ghostbot.v2

./: .gitignore  .releaseignore  README.md  README_4B436633A_OPERATOR_COCKPIT_FOUNDATION.md  README_4B436633B_OPERATOR_COCKPIT_RUNTIME_HARDENING.md  README_4B436633C_OPERATOR_COCKPIT_SECURITY_GATE.md  README_4B436633E_OPERATOR_COCKPIT_ACTION_AUDIT_RUNTIME_LOCK.md  README_4B436633F_OPERATOR_COCKPIT_RISK_RECONCILIATION.md  README_4B436633G_OPERATOR_COCKPIT_RECONCILIATION_EXECUTION.md  README_4B436633H_OPERATOR_COCKPIT_RECONCILIATION_DECISION_APPLY.md  README_4B436633I_OPERATOR_COCKPIT_ENGINE_POSITION_RECOVERY_GATE.md  README_4B436633J_H1_OPERATOR_COCKPIT_RECOVERY_PLAN_ACTION_ROUTE_HOTFIX.md  README_4B436633J_OPERATOR_COCKPIT_RECOVERY_PLAN_APPLY_VERIFICATION_GATE.md  README_4B436633K_OPERATOR_COCKPIT_EXTERNAL_RECOVERY_EVIDENCE_GATE.md  README_4B436633L_OPERATOR_COCKPIT_EXCHANGE_ENVIRONMENT_SOURCE_GATE.md  README_4B436634_H1_DEMO_ENTRY_RUNTIME_AWARENESS_HOTFIX.md  README_4B436634_H2_DEMO_ENTRY_PREFLIGHT_PRICE_HOTFIX.md  README_4B436634_H3_DEMO_ENTRY_EXECUTION_FILL_AWARENESS.md  README_APPLY_4B436627F_H1.txt  README_APPLY_4B436627G.txt  README_APPLY_4B436627GH1.txt  README_APPLY_4B436627GH1H1.txt  README_APPLY_4B436627GH2.txt  README_APPLY_4B436627GH3.txt  README_APPLY_4B436627GH4.txt  README_APPLY_4B436627GH5.txt  README_APPLY_4B436628A.txt  README_APPLY_4B436628B.txt  README_APPLY_4B436628C.txt  README_APPLY_4B436628D.txt  README_APPLY_4B436628D_H1_28E_H1.txt  README_APPLY_4B436628E.txt  README_APPLY_4B436628F.txt  README_APPLY_4B436628F_H1.txt  README_APPLY_4B436628F_H2.txt  (+399 more)
(+6482 files in other folders)
