[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot-python"
version = "0.1.0"
description = "Python re-architecture of the Trade Bot Spot engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "websockets>=13.0",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "pandas>=2.2",
  "numpy>=2.0",
  "xgboost>=2.0",
  "scikit-learn>=1.5",
  "requests>=2.32",
  "customtkinter>=5.2",
  "matplotlib>=3.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
tradebot = "tradebot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
